Fix zooming on firefox
Everything looks so much better hehe

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -548,5 +548,5 @@ body {
 
 div.zoom {
       zoom: 75%; /* all browsers */
-     -moz-transform: scale(75%);  /* Firefox */
+     -moz-transform: scale(0.75);  /* Firefox */
 }
